# open-assembly-mcp

./: .env.example  .gitignore  MAINTAINING.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: publish.yml
assets/: demo-animation.html
data_go_mcp/open_assembly/: client.py  server.py  setup_cli.py
docs/: data-page-embed.html
tests/: test_client.py  test_server.py
